# spectralLLM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENTS.md  GITHUB_UPLOAD_SUMMARY.md  LICENSE  README.md  analyze_trained_model.py  comprehensive_analysis.py  embedding_analysis.py  final_analysis_summary.md  peak_spectral_analysis.py  pyproject.toml  test_comprehensive.py  test_enhanced_features.py  verify_architecture.py
examples/: comprehensive_validation.py  enhanced_training.py  optimized_lr_training.py  simple_training.py
spectralllm/: __init__.py
spectralllm/core/: __init__.py  attention.py  config.py  embeddings.py  evolution.py  model.py  transforms.py
spectralllm/demo/: __init__.py  __main__.py  cli.py  interactive.py
spectralllm/demos/: __init__.py  complexity_demo.py  interactive_demo.py
spectralllm/evaluation/: __init__.py  evaluator.py
spectralllm/training/: __init__.py  trainer.py
spectralllm/utils/: __init__.py  mps_optimizations.py  performance.py  tokenizer.py  visualization.py
spectralllm/validation/: __init__.py  baseline_evaluator.py  dataset_validator.py  metrics_validator.py  perplexity_validator.py
tests/: __init__.py  conftest.py  run_tests.py
tests/integration/: test_training_workflow.py  test_training_workflow.py.bak
tests/performance/: test_performance.py
tests/unit/: test_core_config.py  test_core_model.py  test_core_transforms.py
tests/validation/: test_validation_framework.py  test_validation_framework.py.backup
